# LLM-CodeGen-TestGen

./: Coverage_Reporter.py  File_Manager.py  LLM_Manager.py  README.md  Test_Case_Generator.py  pyproject.toml
Output/: main.c  plc.c
Prompts/: prompt_testgen-enhanced.txt  prompt_testgen-simple.txt
Tests/: CRC_GEN.st  DEC_TO_HEX.st  FLOW_METER.st  FT_PIDWL.st  GEN_BIT.st  GEN_SIN.st  INCLUDE.st  LAMBERT_W.st  MATRIX.st  SEQUENCE_8.st  TOOL_CHANGER.st  TRAFFIC_CTRL.st  template.st
Tests/CRC_GEN_1/: CRC_GEN_FullTest.st  CRC_GEN_FullTest.st.gcov  CRC_GEN_TestCases.csv  CRC_GEN_TestCases.st  output.txt
Tests/CRC_GEN_2/: CRC_GEN_FullTest.st  CRC_GEN_FullTest.st.gcov  CRC_GEN_TestCases.csv  CRC_GEN_TestCases.st  output.txt
Tests/DEC_TO_HEX_1/: DEC_TO_HEX_FullTest.st  DEC_TO_HEX_FullTest.st.gcov  DEC_TO_HEX_TestCases.csv  DEC_TO_HEX_TestCases.st  output.txt
Tests/DEC_TO_HEX_2/: DEC_TO_HEX_FullTest.st  DEC_TO_HEX_FullTest.st.gcov  DEC_TO_HEX_TestCases.csv  DEC_TO_HEX_TestCases.st  output.txt
Tests/FLOW_METER_1/: FLOW_METER_FullTest.st  FLOW_METER_FullTest.st.gcov  FLOW_METER_TestCases.csv  FLOW_METER_TestCases.st  output.txt
Tests/FLOW_METER_2/: FLOW_METER_FullTest.st  FLOW_METER_FullTest.st.gcov  FLOW_METER_TestCases.csv  FLOW_METER_TestCases.st  output.txt
Tests/FT_PIDWL_1/: FT_PIDWL_FullTest.st  FT_PIDWL_FullTest.st.gcov  FT_PIDWL_TestCases.csv  FT_PIDWL_TestCases.st  output.txt
Tests/FT_PIDWL_2/: FT_PIDWL_FullTest.st  FT_PIDWL_FullTest.st.gcov  FT_PIDWL_TestCases.csv  FT_PIDWL_TestCases.st  output.txt
Tests/GEN_BIT_1/: GEN_BIT_FullTest.st  output.txt  (+3 more)
(+65 files in other folders)
